# dtdp-final-paper

./: .gitignore  main.py  pyproject.toml  requirements.txt  script.py
assets/course_treebanks/: README.md  deu.conllu  en.conllu  hun.conllu  mandarin.conllu
corpus/: madarin.conllu
paper/: .gitignore  acl_latex.aux  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  paper.tex
paper/tables/: metrics.tex  results.tex  results_ours.tex  webdata.tex
src/boxes/: ParseTree.py  Row.py  Sentence.py  Treebank.py  test_ParseTree.py
src/constants/: treebank_paths.py
src/metrics/: ClausesPerSentence.py  DepthComplementChains.py  LengthLongestDepLink.py  Metric.py  NounVerbRatio.py  TokenCount.py  TreeDepth.py  TriPosVariety.py  TypeTokenRatio.py  VerbsExplicitSubject.py  VerbsExplicitSubjectTreebank.py  WordFormsPerLemma.py  XcompCcompCount.py
src/parsers/: ConnluParser.py  regex_patterns.py
src/util/: __init__.py  core.py  download_treebanks.py  feature_helpers.py  write_results.py
