[tool.poetry]
name = "final-paper"
version = "0.1.0"
description = ""
authors = ["waron97 <winkler.aron5gmail.com>"]
readme = "README.md"
packages = [{include = "final_paper"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
requests = "^2.28.2"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
pylance = "^0.3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
